--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
 <body>
 
 	<div id="header">
-		<h1>Solutions Ah La Kyle & Stin</h1>
+		<h1>Kyle Oprisko's Website</h1>
 	</div>
 
 	<div id= "insta_populate"> 
-		<h1> hopefully this will full with my instagram feed soon. 
 
+	</div>
+
+	<div id ="resume"> 
+        <iframe src= 
+ "https://docs.google.com/document/d/e/2PACX-1vTYc3E3tVsG5oDTMbO1Y0Sx1OLKbZ4aq1hFeCo2KqZdvNjKKE25SvqMXSuOyVGcJ8mjTxEPw0ZNjGEp/pub?embedded=true">
+        	
+        </iframe>
 	</div>
 
 </body>
