Starting to add resume

--- a/index.html
+++ b/index.html
@@ -7,25 +7,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Kyle's Website</title>
+
+	<title>Kyle's Website</title>
+	<link rel="stylesheet" href="page.css">
 </head>
 
 
 <body>
 
-	<div id="header">
-		<h1>Kyle Oprisko's Website</h1>
-	</div>
+	<div id = "Main"> 
 
-	<div id= "insta_populate"> 
+		<div id="header">
+			
+			<h1>Kyle Oprisko's Website</h1>
+		
+		</div>
 
-	</div>
+		<div id= "insta_populate"> 
 
-	<div id ="resume"> 
-        <iframe src= 
- "https://docs.google.com/document/d/e/2PACX-1vTYc3E3tVsG5oDTMbO1Y0Sx1OLKbZ4aq1hFeCo2KqZdvNjKKE25SvqMXSuOyVGcJ8mjTxEPw0ZNjGEp/pub?embedded=true">
-        	
-        </iframe>
+		</div>
+
+		<div id ="resume"> 
+			<h1> Kyle's Resume <h1>
+	        <img src="RESUME.PDF" alt="KYLE'S RESUME">
+		</div>
+
 	</div>
 
 </body>
