--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-
-
-
-
-
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -14,10 +8,9 @@
 
 
 <body>
+	<div id="main">
 
-	<div id = "Main"> 
-
-		<div id ="Topper">
+		<div class ="topper">
 			
 			<h1>Kyle Oprisko's Website</h1>
 		
@@ -36,7 +29,7 @@
 		</div>
 
 
-		<div id ="resume"> 
+		<div class ="resume"> 
 			<h1> Kyle's Resume <h1>
          		
          		<form action="https://docs.google.com/document/d/e/2PACX-1vTYc3E3tVsG5oDTMbO1Y0Sx1OLKbZ4aq1hFeCo2KqZdvNjKKE25SvqMXSuOyVGcJ8mjTxEPw0ZNjGEp/pub" 
@@ -48,9 +41,7 @@
       			</form>
 	        
 		</div>
-
 	</div>
-
 </body>
 
 </html>
